init commit, reworking all front-end code

--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -1,11 +1,7 @@
-@import "../../node_modules/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 @import "../../node_modules/font-awesome/scss/font-awesome.scss";
+@import "./variables";
 // @import "../../node_modules/@blueprintjs/core/dist/blueprint.scss";
-$primaryBlue: #61AEE0;
-$primaryOrg: #F4B41B;
-$iconColor: #F9D321;
-$transBlue: rgba(97,174,224, .85);
-$darkblue: #00447B;
+
 * {
 	box-sizing: border-box;
 }
@@ -16,407 +12,11 @@ img{
 body{
 	// background: url('../images/476079.jpg')center, center, no-repeat;
 	// background-size: cover;
+	background: $transBlue;
 	font-family: 'PT Sans', sans-serif;
-
-
-	.gen-modal {
-		background-color: #dbd9d9;
-		position: fixed;
-		transform: translate(-50%, -50%);
-		top: 50%;
-	   left: 50%;
-		padding: 1%;
-		border-radius: 5px;
-		z-index: 10;
-		box-shadow: 0 0 0 99999px rgba(0, 0, 0, 0.7);
-		transition: all 200ms ease-in;
-		.close-modal {
-		  color:  #000;
-		  text-decoration: none;
-		  float: right;
-		  position: absolute;
-		  top: 10px;
-		  right: 20px;
-		}
 }
 
 
-.cofc{
-	color: #fff;
-	background: #670000;
-	i{
-		color: #CAB387;
-	}
-}
-.usc{
-	color: #fff;
-	background: #74020C;
-	i{
-		color: #000;
-	}
-}
-.harvard{
-	background: #A51C30;
-	color: #fff;
-	i{
-		color: #000;
-	}
-}
-
-.uva{
-	background: #002F6C;
-	color: #fff;
-	i{
-		color: #F27031;
-	}
-}
-.oxford{
-	background: #002147;
-	color: #fff;
-	i{
-		color: #fff;
-	}
-}
-.pepper{
-	background: #00205C;
-	color: #fff;
-	i{
-		color: #EE7624;
-	}
-}
-.mit{
-	background: #993333;
-	color: #fff;
-	i{
-		color: #666666;
-	}
-}
-.dart{
-	background: #00693E;
-	color: #fff;
-	i{
-		color: #000;
-	}
-}
-.ri{
-	background: #99072D;
-	color: #fff;
-	i{
-		color: #000;
-	}
-}
-.brown{
-	background: #C00404;
-	color: #fff;
-	i{
-		color: #3A1E1A;
-	}
-}
-.vertical {
-	position: absolute;
-	bottom: 0;
-	margin-bottom: 0;
-	right: 15px;
-  display: inline-block;
-  width: 335px;
-  height: 40px;
-  box-shadow: inset 0px 4px 6px #ccc;
-  .fill-bar{
-	  background: $iconColor;
-	  color: #000;
-
-  }
-}
-.usr-nav{
-	background: $primaryBlue;
-	color: #fff;
-	box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-	height: 80px;
-	width: 100%;
-	z-index: 1;
-	position: fixed;
-	.nav-head-cont{
-		.nav-title{
-			color: #fff;
-			text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-			font-size: 30px;
-			font-weight: 700;
-			padding: 20px 0 20px 20px
-		}
-		.nav-search{
-			padding: 40px 0px 40px 40px;
-
-			:hover{
-				color: $iconColor;
-			}
-			i{
-				text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-
-				padding: 17px;
-				color: #fff;
-				font-size: 30px;
-
-			}
-		}
-
-	}
-	.nav-info{
-		padding: 24px;
-		li{
-
-			font-size: 22px;
-			padding: 3px;
-			text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-
-			a{
-				padding: 5px;
-				color: #fff;
-				&:hover{
-					color: $iconColor;
-				}
-			}
-		}
-	}
-	.drop-search{
-		transition: all .2s ease-in;
-
-		width: 300px;
-		background: $transBlue;
-		position: absolute;
-		top: 76.5px;
-		left: 140px;
-		display: block;
-		font-size: 18px;
-		text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-
-		.drop-title{
-
-		}
-		.selections{
-			a{color: #fff;
-				text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-				&:hover{
-					font-weight: 700;
-					background: $primaryOrg;
-				}
-			}
-
-		}
-	}
-}
-
-.progress-bar {
-  box-shadow: inset 0px 4px 6px rgba(100,100,100,0.6);
-}
-
-	#app-container{
-		.student-view{
-
-			background: $primaryBlue;
-			min-height: 968px;
-
-			.stdnt-nav{
-				background: $primaryBlue;
-			}
-			.info-cont{
-				padding-top: 90px;
-				h1{
-					text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-
-					color: #fff;
-					font-weight: 700;
-
-				}
-			}
-		}
-		.in-cont{
-			min-height: 968px;
-
-
-
-			.invst-tab{
-				box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-				z-index: 1;
-   			width: 60px;
-				height: 60px;
-   			position: fixed;
-   			background: $transBlue;
-   			transform: translate(-50%, 0);
-   			left: 2%;
-   			top: 52%;
-				border-top-right-radius: 3px;
-				border-bottom-right-radius: 3px;
-
-
-
-			}
-			.info-modal{
-				transition: all 0.5s ease-in;
-				box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-				border-top-right-radius: 3px;
-				border-bottom-right-radius: 3px;
-				color: #fff;
-				font-weight: 700;
-				z-index: 1;
-				text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-
-				position: fixed;
-				width: 300px;
-				height: 400px;
-				background: $transBlue;
-				transform: translate(-50%, 0);
-				left: 11%;
-				top: 35%;
-				.invst-tab{
-					box-shadow: 0 6px 20px rgba(0,0,0,0.3);
-					left: 110%;
-					top: 39%;
-				}
-
-			}
-
-			.stud-modal{
-				background-color: #dbd9d9;
-				width: 300px;
-				height: 450px;
-
-
-			}
-			color: black;
-			background: $primaryBlue;
-			.student-box{
-				padding-top: 110px;
-
-
-				.stud-card{
-					position: relative;
-					width: 365px;
-					height: 400px;
-					margin-bottom: 20px;
-
-					.btn-invst{
-						margin-left: 20%;
-						width: 200px;
-						background: $darkblue;
-					}
-					.stud-thumb{
-						border: none;
-						padding: 0;
-						height: 100%;
-						width: 100%;
-						.thumb-info{
-							margin: 0 auto;
-							padding-bottom: 80px;
-								padding-left: 5px;
-						}
-						.stud-head{
-							padding: 5px;
-							border-top-left-radius: 4px;
-							border-top-right-radius: 4px;
-
-							margin: 0 0 10px 0;
-
-
-						}
-					}
-
-				}
-			}
-		}
-
-		.home-view{
-			background: url(../images/home-main.jpg) no-repeat center center fixed;
-			background-size: cover;
-			padding-bottom: 50px;
-			.top-offset{
-				background:rgba(0, 0, 0, 0);
-				height: 100px;
-			}
-
-			.home-nav{
-				height: 240px;
-				background: $transBlue;
-				color: #fff;
-				.nav-row{
-					text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-
-					margin: 0;
-				}
-
-				.logo-cont{
-					position: absolute;
-					top: -80px;
-					left: 140px;
-					width: 180px;
-
-				}
-				.title-cont{
-					position: relative;
-					padding-top: 90px;
-					h1{
-						font-weight: 700;
-					}
-				}
-				.menu-col{
-
-					padding-top: 30px;
-					.nav-menu{
-						padding: 137px 0 0 90px;
-						li{
-							padding-right: 15px;
-							a{
-								color: #fff;
-								&:hover{
-									border-bottom: 3px solid $iconColor;
-									color: $iconColor;
-								}
-								:visited{
-									color: #fff;
-								}
-								text-decoration: none;
-							}
-							font-size: 2rem;
-							display: inline-block;
-						}
-					}
-				}
-
-
-			}
-			.login-modal{
-				width: 400px;
-				height: 200px;
-
-			}
-			.signup-modal{
-				width: 400px;
-				height: 600px;
-			}
-
-
-
-
-
-
-			.apply-cont{
-				text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
-
-				color: #fff;
-				background: $transBlue;
-				margin: 0;
-				.icon-container{
-					margin: 0 auto;
-					width: 30%;
-				}
-
-			}
-
-			.abt-cont{
-				padding-bottom: 30px;
-				height: 400px;
-			}
-
-
-		}
-}
+.form{
+	background: #fff;
 }
